snapshots/com/wadpam/openserver/errors/maven-metadata.xml.sha1
da8508b524606a564f6e62e0206473215c21025a